# kubernetes

./: .gitignore  .gitkeep  .yamllint.yaml  ARGO_ROLLOUTS_GITOPS_EXAMPLES.md  CHORES_TRACKER_INTEGRATION.md  CLAUDE.md  INFRASTRUCTURE_ATLAS.md  README.md  atlantis.yaml  cloudflare-tunnel-backup.yaml  index.md  k3s-kubeconfig.yaml  lifecycle-policy.json  loki-s3-policy.json  restore-job.yaml  traefik-backup.yaml
app-discovery/: book-project.yaml  chores-backend.yaml  ecr-secrets-book-project.yaml  ecr-secrets-chores.yaml
argocd/: mysqltest-mysqltest.yaml  test-argocd-test-argocd.yaml  test-mysql-1-test-mysql-1.yaml  test-mysql-2-test-mysql.yaml  test-mysql-test-mysql.yaml  test-mysql3-test-mysql3.yaml  testmysql-testmysql.yaml
backups/: chores-db-only_restore.sql  mysql_backup_20251029_020017.sql
base-apps/: .gitignore  README.md  _INDEX.md  agent-audit-aws-infrastructure.yaml  agent-sandbox-crds.yaml  agent-ui-backend.yaml  agent-ui-frontend.yaml  ai-platform.yaml  argo-cd.yaml  argo-rollouts-config.yaml  argo-rollouts.yaml  argo-workflow-tasks.yaml  argo-workflows-aws-infrastructure.yaml  argo-workflows-config.yaml  argo-workflows.yaml  argocd-project-exclusions.yaml  asela-test2.yaml  asela-test3.yaml  (+125 more)
base-apps/kagent/plex-stack-mcp/: DEPLOY-HANDOFF.md  Dockerfile  pyproject.toml
base-apps/kagent/plex-stack-mcp/plex_stack_mcp/: config.py  plex_client.py  qbit_client.py  server.py  tools.py
base-apps/kagent/plex-stack-mcp/tests/: test_config.py  test_plex_client.py  test_qbit_client.py  test_server_registration.py  test_tools_read.py  test_tools_write.py
(+1059 files in other folders)
